--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#home" class="nav-link">Главная</a></li>
                 <li><a href="faceit-ranking.html" class="nav-link">FACEIT Рейтинг</a></li>
                 <li><a href="spotify-stats.html" class="nav-link">Spotify Статистика</a></li>
+                <li><a href="clash-royale.html" class="nav-link">Clash Royale</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -167,6 +168,14 @@
                         <ul>
                             <li><a href="#artists">Артисты</a></li>
                             <li><a href="#releases">Релизы</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Статистика</h4>
+                        <ul>
+                            <li><a href="faceit-ranking.html">FACEIT</a></li>
+                            <li><a href="spotify-stats.html">Spotify</a></li>
+                            <li><a href="clash-royale.html">Clash Royale</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
