feat: integrate RoyaleAPI proxy for Clash Royale API - Replace direct API calls with proxy server - Add comprehensive documentation - Update README with API setup instructions - Create quick setup guide - Fix IP whitelist issues

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
                     <div class="footer-section">
                         <h4>Поддержка</h4>
                         <ul>
+                            <li><a href="QUICK_SETUP.md">Быстрая настройка</a></li>
+                            <li><a href="ROYALEAPI_SETUP.md">Настройка API</a></li>
                             <li><a href="#">FAQ</a></li>
                             <li><a href="#">Прайваси</a></li>
                         </ul>
